fixed spacing; added more color to other panels; version bump for committed code

--- a/scss/colors/_light_teal.scss
+++ b/scss/colors/_light_teal.scss
@@ -30,6 +30,7 @@ $color-complement-1: #FFB773;
 $color-complement-2: #FF9E42;
 $color-complement-3: #EA7200;
 $color-complement-4: #AE5500;
+$color-complement-light: #FFB773;
 
 
 
@@ -58,6 +59,7 @@ $rgba-complement-1: rgba(255,183,115,1);
 $rgba-complement-2: rgba(255,158, 66,1);
 $rgba-complement-3: rgba(234,114,  0,1);
 $rgba-complement-4: rgba(174, 85,  0,1);
+$rgba-complement-light: rgba(255, 183, 115, 1);
 
 
 $color-link: #025A6B;
