--- a/scss/colors/_turquoise.scss
+++ b/scss/colors/_turquoise.scss
@@ -30,6 +30,7 @@ $color-complement-1: #FFE3C6;
 $color-complement-2: #FFCA93;
 $color-complement-3: #FFA548;
 $color-complement-4: #E98118;
+$color-complement-light: #FFE3C6;
 
 
 
@@ -58,6 +59,7 @@ $rgba-complement-1: rgba(255,227,198,1);
 $rgba-complement-2: rgba(255,202,147,1);
 $rgba-complement-3: rgba(255,165, 72,1);
 $rgba-complement-4: rgba(233,129, 24,1);
+$rgba-complement-light: rgba(255, 227, 198, 1);
 
 
 $color-link: #147591;
